; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/mlx5/mlx5_en/extr_mlx5_en_main.c_mlx5e_sq_cev_timeout.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/mlx5/mlx5_en/extr_mlx5_en_main.c_mlx5e_sq_cev_timeout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx5e_sq = type { i32, i32, i32, i32 }

@MA_OWNED = common dso_local global i32 0, align 4
@MLX5E_CEV_STATE_INITIAL = common dso_local global i32 0, align 4
@hz = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mlx5e_sq_cev_timeout(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.mlx5e_sq*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.mlx5e_sq*
  store %struct.mlx5e_sq* %5, %struct.mlx5e_sq** %3, align 8
  %6 = load %struct.mlx5e_sq*, %struct.mlx5e_sq** %3, align 8
  %7 = getelementptr inbounds %struct.mlx5e_sq, %struct.mlx5e_sq* %6, i32 0, i32 3
  %8 = load i32, i32* @MA_OWNED, align 4
  %9 = call i32 @mtx_assert(i32* %7, i32 %8)
  %10 = load %struct.mlx5e_sq*, %struct.mlx5e_sq** %3, align 8
  %11 = getelementptr inbounds %struct.mlx5e_sq, %struct.mlx5e_sq* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  switch i32 %12, label %25 [
    i32 128, label %13
  ]

13:                                               ; preds = %1
  %14 = load %struct.mlx5e_sq*, %struct.mlx5e_sq** %3, align 8
  %15 = call i32 @mlx5e_sq_send_nops_locked(%struct.mlx5e_sq* %14, i32 0)
  %16 = load %struct.mlx5e_sq*, %struct.mlx5e_sq** %3, align 8
  %17 = getelementptr inbounds %struct.mlx5e_sq, %struct.mlx5e_sq* %16, i32 0, i32 2
  %18 = load i32, i32* %17, align 4
  %19 = icmp eq i32 %18, 0
  br i1 %19, label %20, label %24

20:                                               ; preds = %13
  %21 = load i32, i32* @MLX5E_CEV_STATE_INITIAL, align 4
  %22 = load %struct.mlx5e_sq*, %struct.mlx5e_sq** %3, align 8
  %23 = getelementptr inbounds %struct.mlx5e_sq, %struct.mlx5e_sq* %22, i32 0, i32 0
  store i32 %21, i32* %23, align 4
  br label %34

24:                                               ; preds = %13
  br label %28

25:                                               ; preds = %1
  %26 = load %struct.mlx5e_sq*, %struct.mlx5e_sq** %3, align 8
  %27 = getelementptr inbounds %struct.mlx5e_sq, %struct.mlx5e_sq* %26, i32 0, i32 0
  store i32 128, i32* %27, align 4
  br label %28

28:                                               ; preds = %25, %24
  %29 = load %struct.mlx5e_sq*, %struct.mlx5e_sq** %3, align 8
  %30 = getelementptr inbounds %struct.mlx5e_sq, %struct.mlx5e_sq* %29, i32 0, i32 1
  %31 = load i32, i32* @hz, align 4
  %32 = load %struct.mlx5e_sq*, %struct.mlx5e_sq** %3, align 8
  %33 = call i32 @callout_reset_curcpu(i32* %30, i32 %31, void (i8*)* @mlx5e_sq_cev_timeout, %struct.mlx5e_sq* %32)
  br label %34

34:                                               ; preds = %28, %20
  ret void
}

declare dso_local i32 @mtx_assert(i32*, i32) #1

declare dso_local i32 @mlx5e_sq_send_nops_locked(%struct.mlx5e_sq*, i32) #1

declare dso_local i32 @callout_reset_curcpu(i32*, i32, void (i8*)*, %struct.mlx5e_sq*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
